# artifacts/api-server/src/routes/index.ts
@@ -3,6 +3,7 @@ import healthRouter from "./health";
 import areasRouter from "./areas";
 import quizRouter from "./quiz";
 import eventsRouter from "./events";
+import freeGroupRouter from "./free-group";
 
 const router: IRouter = Router();
 
@@ -10,5 +11,6 @@ router.use(healthRouter);
 router.use(areasRouter);
 router.use(quizRouter);
 router.use(eventsRouter);
+router.use(freeGroupRouter);
 
 export default router;
